:stuck_out_tongue_closed_eyes:Got all player characters moving and stopped if needed

--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,64 @@
-.mountains {
+.place {
     position: absolute;
+    height: 43px;
+    z-index: -10;
+}
+
+#mountains {
     width: 4.7%;
-    height: 50px;
     background-color: grey;
 }
 
-.lowlands {
-    position: absolute;
+#lowlands {
     width: 20.4%;
-    height: 50px;
     margin-left: 4.7%;
     background-color: green;
 }
 
-.water {
-    position: absolute;
+#water {
     width: 17.2%;
-    height: 50px;
     margin-left: 25%;
     background-color: blue;
 }
 
-.beans {
-    position: absolute;
-    z-index: 10;
+#beans {
     margin-left: 42.2%;
     width: 2.6%;
-    height: 50px;
     background-color: red;
 }
 
-.enemyWater {
-    position: absolute;
+#enemyWater {
     width: 17%;
-    height: 50px;
     margin-left: 44.8%;
     background-color: blue;
 }
 
-.enemyLowlands {
-    position: absolute;
+#enemyLowlands {
     width: 20.3%;
-    height: 50px;
     margin-left: 61.8%;
     background-color: green;
 }
 
-.enemyMountains {
-    position: absolute;
+#enemyMountains {
     width: 4.3%;
-    height: 50px;
     margin-left: 82.1%;
     background-color: grey;
-}
-
-.row1, .row2, .row3, .row4 {
-    border: 2px black solid;
 }
 
 .board {
     height: 50px;
 }
 
-
-
-
 .no-gutters {
-  margin-right: 0;
-  margin-left: 0;
-
-  > .col,
-  > [class*="col-"] {
-    padding-right: 0;
-    padding-left: 0;
-  }
+    border: 2px black solid;
+    margin-right: 0;
+    margin-left: 0;
 }
 
-#mage, #ogre, #elf {
+.moeChoices {
     position: absolute;
     margin-top: 40px;
+    margin-left: 20px;
     height: 50px;
     width: 50px;
 }
@@ -96,13 +76,14 @@
 }
 
 .moe {
-    margin-top: .75%;
-    height: 40px;
+    margin-top: 10%;
+    height: 38px;
     width: 20px;
 }
 
 .emptyBox {
-    margin-top: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     border-radius: 5px;
     border: 2px solid black;
     height: 38px;
